jilles      2005/10/31 00:24:06 UTC	(20051031-3307)
  Log:
  - Properly cycle through all the uplinks
  - Make uplink ping timeouts work
  - Make uplink reconnection work better
  

  Changes:	Modified:
  +15 -8	trunk/src/packet.c (File Modified) 
  +9 -6		trunk/src/uplink.c (File Modified) 


alambert    2005/10/31 00:19:14 UTC	(20051031-3305)
  Log:
  authcookie: Make authcookie_create() return an authcookie_t pointer

  Changes:	Modified:
  +1 -1		trunk/include/authcookie.h (File Modified) 
  +4 -1		trunk/modules/xmlrpc/account.c (File Modified) 
  +3 -3		trunk/src/authcookie.c (File Modified) 


alambert    2005/10/30 23:36:28 UTC	(20051030-3303)
  Log:
  CS COUNT: always require ACLVIEW privilege -- don't let opers override (consistent with XOP LIST)

  Changes:	Modified:
  +1 -1		trunk/modules/chanserv/count.c (File Modified) 


alambert    2005/10/30 23:35:51 UTC	(20051030-3301)
  Log:
  CS COUNT: add AKICK; use switch instead of if

  Changes:	Modified:
  +22 -11	trunk/modules/chanserv/count.c (File Modified) 


jilles      2005/10/30 22:25:26 UTC	(20051030-3299)
  Log:
  Show all uplinks in /stats c (ircops only and no ips).
  

  Changes:	Modified:
  +9 -1		trunk/src/ptasks.c (File Modified) 


alambert    2005/10/30 21:54:45 UTC	(20051030-3297)
  Log:
  XMLRPC: rename register_account to account.register; same with verify_account

  Changes:	Modified:
  +8 -8		trunk/modules/xmlrpc/account.c (File Modified) 


alambert    2005/10/30 21:51:26 UTC	(20051030-3295)
  Log:
  atheme.account.set_metadata: add length checking

  Changes:	Modified:
  +2 -1		trunk/modules/xmlrpc/account.c (File Modified) 


alambert    2005/10/30 21:25:29 UTC	(20051030-3293)
  Log:
  SET PROPERTY: fix off-by-one in mdlimit

  Changes:	Modified:
  +1 -1		trunk/modules/chanserv/set.c (File Modified) 
  +1 -1		trunk/modules/nickserv/set.c (File Modified) 


alambert    2005/10/30 21:23:32 UTC	(20051030-3291)
  Log: