@@ -7,7 +7,7 @@
  *
  * Items marked with "(*)" are reconfigurable at runtime via REHASH.
  *
- * $Id: example.userserv.conf 3231 2005-10-28 23:17:27Z jilles $
+ * $Id: example.userserv.conf 3311 2005-10-31 00:50:59Z jilles $
  */
 
 /* Protocol module.
@@ -125,7 +125,6 @@ loadmodule "modules/userserv/vhost";
  * CLEAR command                                 modules/chanserv/clear
  * CLEAR BANS command                            modules/chanserv/clear_bans
  * CLEAR USERS command                           modules/chanserv/clear_users
- * COUNT access command				 modules/chanserv/count
  * DROP command                                  modules/chanserv/drop
  * FLAGS system                                  modules/chanserv/flags
  * Forced foundership transfers                  modules/chanserv/ftransfer
@@ -155,7 +154,6 @@ loadmodule "modules/chanserv/close";
 loadmodule "modules/chanserv/clear";
 loadmodule "modules/chanserv/clear_bans";
 loadmodule "modules/chanserv/clear_users";
-loadmodule "modules/chanserv/count";
 loadmodule "modules/chanserv/drop";
 loadmodule "modules/chanserv/flags";
 loadmodule "modules/chanserv/ftransfer";
