@@ -1,3 +1,11 @@
+alambert    2005/10/31 00:28:57 UTC	(20051031-3309)
+  Log:
+  atheme.login: update mu->lastlogin on XML-RPC login
+
+  Changes:	Modified:
+  +3 -0		trunk/modules/xmlrpc/account.c (File Modified) 
+
+
 jilles      2005/10/31 00:24:06 UTC	(20051031-3307)
   Log:
   - Properly cycle through all the uplinks
